sass/px-alert-message.scss
/*
 * Copyright (c) 2014 GE Global Research. All rights reserved.
 *
 * The copyright to the computer software herein is the property of
 * GE Global Research. The software may be used and/or copied only
 * with the written permission of GE Global Research or in accordance
 * with the terms and conditions stipulated in the agreement/contract
 * under which the software has been supplied.
 */

// Settings

// Generic
@import "px-normalize-design/_generic.normalize.scss";
@import "px-box-sizing-design/_generic.box-sizing.scss";
@import "px-helpers-design/_generic.helpers.scss";

// Base
@import "px-flexbox-design/_base.flexbox.scss";
$inuit-enable-btn--bare: true;
$inuit-enable-btn--tertiary: true;
@import "px-buttons-design/_objects.buttons.scss";
$actionable: true;
@import "px-actionable-design/_objects.actionable.scss";
@import "px-shadows-design/_objects.shadows.scss";

@keyframes fadein {
  from {
    opacity: 0;
    left: 4rem;
  }
  to {
    opacity: 1;
    left: 0;
  }
}

@keyframes fadeout {
  from {
    opacity: 1;
    max-height: $inuit-base-spacing-unit--small * 10;
    min-height: 0px;
  }
  to   {
    opacity: 0;
    max-height: 0px;
    min-height: 0px;
    padding-top: 0px;
    padding-bottom: 0px;
  }
}

// Component
:host {
  --px-alert-label-background-color--important: white;
  --px-alert-label-text-color--important: black;
  --px-alert-label-background-color--error: white;
  --px-alert-label-text-color--error: black;
  --px-alert-label-background-color--warning: white;
  --px-alert-label-text-color--warning: black;
  --px-alert-label-background-color--information: white;
  --px-alert-label-text-color--information: black;
  --px-alert-label-background-color--unknown: white;
  --px-alert-label-text-color--unknown: black;
}
.alert-message {
  width: $inuit-base-spacing-unit--small * 40;
  margin: $inuit-base-spacing-unit--tiny;
  padding: $inuit-base-spacing-unit--small;
  min-height: $inuit-base-spacing-unit--small * 6;
  animation: fadein .4s cubic-bezier(.78,.13,.16,.87);
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color, white);
  opacity: 1;
  position: relative;
  button, a {
      outline: none;
  }
  &.fade-out {
    animation: fadeout .4s cubic-bezier(.78,.13,.16,.87);
    max-height: 0px;
  }
  .messageColumn {
    flex: 2;
    margin-left: $inuit-base-spacing-unit--small;
    margin-right: $inuit-base-spacing-unit--small;
  }
  .severity {
    min-height: 4rem;
    min-width: 4rem;
    max-width: 4rem;
    margin-left: -0.6666rem;
    margin-top: -0.6666rem;
    margin-bottom: -0.6666rem;
    padding-top: 1rem;
    overflow: hidden;
    &.important {
      background-color: var(--px-alert-message-color--important, red);
    }
    &.information {
      background-color: var(--px-alert-message-color--information, blue);
    }
    &.warning {
      background-color: var(--px-alert-message-color--warning, orange);
    }
    &.error {
      background-color: var(--px-alert-message-color--error, yellow);
    }
    &.unknown {
      background-color: var(--px-alert-message-color--unknown, gray);
    }
  }

  .message {
    color: var(--px-alert-message-text-color, black);
    line-height: $inuit-base-line-height;
    font-size: $inuit-base-font-size;
    padding: 0;
    margin: 0;

    &.more {
      text-align: center;
      font-size: 1.4rem;
      margin-left:  $inuit-base-spacing-unit--large;
      margin-top:  $inuit-base-spacing-unit--tiny;
    }
    &.collapsedMessage{
      overflow: hidden;
      text-overflow: ellipsis;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 3;                     /* number of lines to show */
      max-height: $inuit-base-line-height * 3;   /* fallback */
    }
    .title {
      font-weight: bold;
    }
  }
  .action {
    width: auto;
    cursor: pointer;
    .dismiss {
      color: var(--px-alert-message-dismiss-icon-color, gray);
      outline: none;
      margin-bottom: calculateRem(2px);
      margin-left: calculateRem(4px);

      px-icon {
        --iron-icon-height: $inuit-base-font-size;
        --iron-icon-width: $inuit-base-font-size;
      }
    }
  }
}

// Trumps

